--- a/root/app/templates/app.html
+++ b/root/app/templates/app.html
@@ -1,80 +1,10 @@
-<!--<nav-bar></nav-bar>
-
-<div class="container" style="padding-top:50px;">
-        <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
-                        <div id="router-content" style="margin-left:40px;">
-                                <router-view ></router-view>
-                        </div>
-                </div>
-                <side-nav></side-nav>
-
-        </div>
-</div>-->
-
-
-<div class="container fluid">
+<div class="container fluid" style="overflow:'hidden';">
         <div class="row">
                 <portrait></portrait>
-                <root-content></root-content>
-                        <div class="col-md-7 no-float">
+               <root-content></root-content>
+             
+              
+            
 
-            <div class="container fluid">
-                <div class="row">
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <div class="header-title">
-                        <span style="font-size: 50px;color: #073c4c;font-family: fantasy"> Taskimon</span>
-                    </div>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-
-                    <div class="horizontal-center">
-
-
-                        <form novalidate action="/login" method="post">
-                            <md-card>
-                                <md-card-header>
-                                    <md-card-title>Welcomesdsd</md-card-title>
-                                </md-card-header>
-                                <md-card-content>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <md-input-container class="example-full-width">
-                                                    <input mdInput placeholder="username" name="username">
-                                                </md-input-container>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <md-input-container class="example-full-width">
-                                                    <input mdInput placeholder="password" name="password" type="password">
-                                                </md-input-container>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td> <button class="btn-block" style="background-color:#93b81d;" md-raised-button
-                                                    type="submit">Log in   dsdsdsd </button></td>
-                                        </tr>
-                                    </table>
-                                </md-card-content>
-                            </md-card>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-
-        </div>
         </div>
 </div>
