--- a/root/app/templates/navBar.html
+++ b/root/app/templates/navBar.html
@@ -1,26 +1,28 @@
- <div class="navbar navbar-prime navbar-fixed-top" style="border-radius: 0px;">
+ <div class="navbar navbar-prime navbar-fixed-top col-md-7 col-md-offset-5" style="border-radius: 0px;">
 
         <div class="navbar-header" style="background-color:#93b81d;width:200px">
-            <a class="navbar-brand" ><i (click)="onSideNavToggle()" class="fa fa-reorder floatRight cursorPointer"></i><span style="padding-left:30px;padding-right:30px;color:#000000;"><b>Taskimon</b></span></a>
+            <a class="navbar-brand" ><i (click)="onSideNavToggle()" class="fa fa-reorder floatRight cursorPointer"></i><span style="padding-left:30px;padding-right:30px;color:#000000;"><b>TEST</b></span></a>
         </div>
-        <!--
+        
             <ul class="nav navbar-nav">
             <li class="active"><a class="lime-text" href="#">Home</a></li>
-            <li class="dropdown"><a class="dropdown-toggle lime-text" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <li class=""><a class="lime-text" href="#">About</a></li>
+            <li class=""><a class="lime-text" href="#">Contact</a></li>
+            <!--<li class="dropdown"><a class="dropdown-toggle lime-text" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a class="lime-text" href="#">Page 1-1</a></li>
                     <li><a class="lime-text" href="#">Page 1-2</a></li>
                     <li><a class="lime-text" href="#">Page 1-3</a></li>
                 </ul>
-            </li>
+            </li>-->
             <li><a class="lime-text" href="#">Page 2</a></li>
         </ul>
-        -->
-        <ul class="nav navbar-nav navbar-right" style="padding-right:10px;">
+        
+        <!--<ul class="nav navbar-nav navbar-right" style="padding-right:10px;">
             <li><a class="lime-text" routerLink="blazerLevel"><span class="glyphicon glyphicon-user"></span> Blazer Level 510-(25)</a></li>
             <li><a class="lime-text" href=""><span class="glyphicon glyphicon-user"></span> {{loggedInUserProfile.username}}</a></li>
             <li><a class="lime-text" href="/logout"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
 
-        </ul>
+        </ul>-->
 
     </div>
