--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,68 +1,69 @@
-        <div class="col-md-5 no-float" style="background-image: url('/images/bg2.png');background-repeat: no-repeat;background-size: cover;">
-            <div class="vertical-center">
-                <!--<img src="./images/taskimon_logo.png" alt="taskimon_logo" width="200" height="200">-->
+<div class="col-md-5" style="background-image: url('/images/bg2.png');background-repeat: no-repeat;background-size: cover;">
 
-                <!--carousel start-->
 
-                <div class="container">
 
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators" style="padding-top:10px">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <!--<img src="./images/taskimon_logo.png" alt="Los Angeles" style="width:200px;height:200px;">-->
 
-                                <div class="carousel-content">
-                                    <div>
-                                        <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus
-                                            nam saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur
-                                            dicta cumque repellendus eligendi ducimus placeat! </p>
-                                    </div>
-                                </div>
-                            </div>
+    <div style="position:absolute;
+    display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+ 
+ bottom:20px;
+  border: solid 1px red;
+    ">
 
-                            <div class="item">
-                                 <div class="carousel-content">
-                                    <div>
-                                        <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus
-                                            nam saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur
-                                            dicta cumque repellendus eligendi ducimus placeat! </p>
-                                    </div>
-                                </div>
-                            </div>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-                            <div class="item">
-                                 <div class="carousel-content">
-                                    <div>
-                                        <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus
-                                            nam saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur
-                                            dicta cumque repellendus eligendi ducimus placeat! </p>
-                                    </div>
-                                </div>
-                            </div>
+            <ol class="carousel-indicators" style="bottom:-20px">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+
+            <div class="carousel-inner">
+                <div class="item active">
+
+
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
+                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
+                                eligendi ducimus placeat! </p>
                         </div>
-
-                        <!-- Left and right controls -->
-                        <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>-->
                     </div>
                 </div>
 
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
+                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
+                                eligendi ducimus placeat! </p>
+                        </div>
+                    </div>
+                </div>
 
-                <!--carousel end-->
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
+                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
+                                eligendi ducimus placeat! </p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
+    </div>
+    <div class="vertical-center">
+    </div>
+
+
+
+
+
+
+</div>
