--- a/root/app/templates/app.html
+++ b/root/app/templates/app.html
@@ -1,10 +1,6 @@
 <div class="container fluid" style="overflow:'hidden';">
         <div class="row">
                 <portrait></portrait>
-               <root-content></root-content>
-             
-              
-            
-
+                <resume></resume>
         </div>
 </div>
