--- a/root/index.ejs
+++ b/root/index.ejs
@@ -2,15 +2,14 @@
 <html>
 
 <head>
-  <title>Taskimon</title>
+  <title>Test</title>
   <meta charset="UTF-8">
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ng2-bootstrap/x.x.x/ng2-bootstrap.min.js"></script>-->
-
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 
@@ -24,38 +23,28 @@
   <!-- Load the Angular Material stylesheet -->
   <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!---->
+
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext,cyrillic'
     rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/jquery.multilevelpushmenu.css">
-  <link rel="stylesheet" href="css/basichtml.css">
+
   <script type="text/javascript" src="https://oss.maxcdn.com/libs/modernizr/2.6.2/modernizr.min.js"></script>
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+
   <script src="js/lib/jquery.multilevelpushmenu.min.js"></script>
-  <script type="text/javascript" src="js/basichtml.js"></script>
-  <!---->
-
-  <style>
-    body {
-      font-family: Roboto, Arial, sans-serif;
-    }
-  </style>
 
 
-  <!--<link rel="stylesheet" href="css/style.css"> -->
+
+
+
+
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/spinner.css">
   <link rel="stylesheet" href="css/app.css">
 
 
 
-  <!--
-  <script src="node_modules/core-js/client/shim.min.js"></script>
-  <script src="node_modules/zone.js/dist/zone.js"></script>
-  <script src="node_modules/reflect-metadata/Reflect.js"></script>
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-  -->
+ 
 
   <script src="js/lib/shim.min.js"></script>
   <script src="js/lib/zone.js"></script>
