--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,3 +1,58 @@
-<div class="col-md-6" >
-       PORTRAIT
+<div class="col-md-5" style="background-image: url('/images/bg2.png');background-repeat: no-repeat;background-size: cover;">
+    <div class="vertical-center">
+    </div>
+
+    <!--carousel start-->
+
+        <div class="container" style="position:'absolute';bottom:50px">
+
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators" style="padding-top:10px">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <!--<img src="./images/taskimon_logo.png" alt="Los Angeles" style="width:200px;height:200px;">-->
+
+                        <div class="carousel-content">
+                            <div>
+                                <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam
+                                    saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta
+                                    cumque repellendus eligendi ducimus placeat! </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="carousel-content">
+                            <div>
+                                <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam
+                                    saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta
+                                    cumque repellendus eligendi ducimus placeat! </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="carousel-content">
+                            <div>
+                                <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam
+                                    saepe delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta
+                                    cumque repellendus eligendi ducimus placeat! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    
+
+
+    <!--carousel end-->
 </div>
