--- a/root/app/templates/resume.html
+++ b/root/app/templates/resume.html
@@ -1,3 +1,12 @@
-<div class="col-md-7" >
-       RESUME
+<div class="col-md-7">
+
+    <nav-bar>    </nav-bar>
+    RESUME
+
+    <div class="container">
+        <h3>Collapsible Navbar</h3>
+        <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try
+            to re-size this window).
+            <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+    </div>
 </div>
