--- a/root/app/templates/resume.html
+++ b/root/app/templates/resume.html
@@ -1,9 +1,9 @@
 <div class="col-md-7">
 
     <nav-bar>    </nav-bar>
-    RESUME
+   
 
-    <div class="container">
+    <div class="container" style="padding-top:50px">
         <h3>Collapsible Navbar</h3>
         <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try
             to re-size this window).
