--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -13,50 +13,91 @@
   border: solid 1px transparent;
     ">
 
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-            <ol class="carousel-indicators" style="bottom:-20px">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-
-
-            <div class="carousel-inner">
-                <div class="item active">
-
-
-                    <div class="carousel-content">
-                        <div>
-                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
-                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
-                                eligendi ducimus placeat! </p>
+        <table>
+            <tr>
+                <td style="    text-align: center;">
+                    <div class="block__inner">
+                        <div class="block-content">
+                            <h1 class="block__title">
+                                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Raf,</span>
+                            </h1>
+                            <h1 class="block__title">
+                                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a Belgian <em>front-end developer</em> working in <em>London</em> at NEVERBLAND</span>
+                            </h1>
+                            <div class="block__cta" style="overflow: visible;">
+                                <a href="mailto:hi@rafaelderolez.be" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
+                                    <span>Get in touch</span>
+                                </a>
+                            </div>
+                            <div class="block__social">
+                                <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                    <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                                <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                                <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                        <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                                <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-                <div class="item">
-                    <div class="carousel-content">
-                        <div>
-                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
-                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
-                                eligendi ducimus placeat! </p>
+                        <ol class="carousel-indicators" style="bottom:-20px">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+
+
+                        <div class="carousel-inner">
+                            <div class="item active">
+
+
+                                <div class="carousel-content">
+                                    <div>
+                                        <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint
+                                            re consequatur
+                                            dicta cumque repellendus eligendi ducimus placeat! </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <div class="carousel-content">
+                                    <div>
+                                        <p style="color:#fff">Lorem ipm necessitatibus dolores tempore consequatur
+                                            dicta cumque repellendus eligendi ducimus placeat! </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <div class="carousel-content">
+                                    <div>
+                                        <p style="color:#fff">Lorem ipsum dolessitatibus dolores tempore consequatur
+                                            dicta cumque repellendus eligendi ducimus placeat! </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="item">
-                    <div class="carousel-content">
-                        <div>
-                            <p style="color:#fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, sint fuga temporibus nam saepe
-                                delectus expedita vitae magnam necessitatibus dolores tempore consequatur dicta cumque repellendus
-                                eligendi ducimus placeat! </p>
-                        </div>
                     </div>
-                </div>
-            </div>
+                </td>
+            </tr>
+        </table>
 
-        </div>
+
+
+
     </div>
     <div class="vertical-center">
     </div>
