--- a/root/app/templates/nav-bar.html
+++ b/root/app/templates/nav-bar.html
@@ -6,16 +6,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Sivaraj Nagaraj</a>
+      <a class="navbar-brand" href="#">fsfsd sdfsd</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="">Home</a></li>
-        <li class=""><a href="">Experience</a></li>
-        <li class=""><a href="">Skills</a></li>
-        <li class=""><a href="">Certifications</a></li>
-        <li class=""><a href="">Projects</a></li>
-        <li class=""><a href="">Academy</a></li>
+        <li class="active"><a routerLink="/home" routerLinkActive="active">Home</a></li>
+        <li class=""><a routerLink="/experience" routerLinkActive="active">Experience</a></li>
+        <li class=""><a routerLink="/skills" routerLinkActive="active">Skills</a></li>
+        <li class=""><a routerLink="/certifications" routerLinkActive="active">Certifications</a></li>
+        <li class=""><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
+        <li class=""><a routerLink="/academy" routerLinkActive="active">Academy</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
           <ul class="dropdown-menu">
