--- a/root/app/templates/resume.html
+++ b/root/app/templates/resume.html
@@ -9,4 +9,5 @@
             to re-size this window).
             <p>Only when the button is clicked, the navigation bar will be displayed.</p>
     </div>
+        <router-outlet></router-outlet>
 </div>
