-rouer active link

--- a/root/app/templates/nav-bar.html
+++ b/root/app/templates/nav-bar.html
@@ -10,12 +10,12 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a routerLink="/home" routerLinkActive="active">Home</a></li>
-        <li class=""><a routerLink="/experience" routerLinkActive="active">Experience</a></li>
-        <li class=""><a routerLink="/skills" routerLinkActive="active">Skills</a></li>
-        <li class=""><a routerLink="/certifications" routerLinkActive="active">Certifications</a></li>
-        <li class=""><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
-        <li class=""><a routerLink="/academy" routerLinkActive="active">Academy</a></li>
+        <li routerLinkActive="active"><a routerLink="/home" >Home</a></li>
+        <li routerLinkActive="active"><a routerLink="/skills" >Skills</a></li>
+        <li routerLinkActive="active"><a routerLink="/certifications" >Certifications</a></li>
+        <li routerLinkActive="active"><a routerLink="/experience" >Experience</a></li>
+        <li routerLinkActive="active"><a routerLink="/projects" >Projects</a></li>
+        <li routerLinkActive="active"><a routerLink="/academy" >Academy</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
           <ul class="dropdown-menu">
