--- a/root/app/templates/academy.html
+++ b/root/app/templates/academy.html
@@ -8,3 +8,7 @@
 <br/>
 <br/>
 <h1>ACADEMY</h1>
+<md-card>Simple card</md-card>
+<md-card>Simple card</md-card>
+<md-card>Simple card</md-card>
+<md-card>Simple card</md-card>
