--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,4 +1,4 @@
-<div class="col-md-5" style="background-image: url('/images/bg2.png');background-repeat: no-repeat;background-size: cover;">
+<div class="col-md-5" style="background-image: url('/images/bg2.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
 
 
 
