--- a/root/app/templates/resume.html
+++ b/root/app/templates/resume.html
@@ -1,13 +1,14 @@
-<div class="col-md-7">
+<div class="col-md-7" style="overflow-y: scroll;height: 100vh;">
 
-    <nav-bar>    </nav-bar>
-   
+    <nav-bar> </nav-bar>
+
 
     <div class="container" style="padding-top:50px">
         <h3>Collapsible Navbar</h3>
         <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try
             to re-size this window).
             <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+
+            <router-outlet></router-outlet>
     </div>
-        <router-outlet></router-outlet>
 </div>
