--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -3,19 +3,22 @@
 
     <div style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
-        <h1 class="block__title">
+        <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
             <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Sivaraj,</span>
         </h1>
-        <h1 class="block__title">
+        <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
 
-            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Software Developer</em> with fluency in <em>MEAN Stack, Hybrid Mobile Apps</em>  and begginer in <em> Machine Learning</em> working in <em>Bengaluru, India</em> </span>
+            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Developer</em> fluent in <br/><em>MEAN Stack</em>, <em>Hybrid Mobile Apps</em>, beginner in <em> Machine Learning</em> and working in <em>Bengaluru, India</em> </span>
         </h1>
         <div class="block__cta " style="overflow: visible;">
-            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
-                                    <span>Get in touch</span>
+            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-shadow: 2px 2px 4px #000000;">
+                                    <span    style=" font-size: small;">Get in touch</span>
                                 </a>
         </div>
         <div class="block__social">
+            <a class="block__social__link " target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                    <div class="fa fa-facebook"></div>
+                    </a>
             <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
                     <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
                     </a>
