--- a/root/index.ejs
+++ b/root/index.ejs
@@ -26,7 +26,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext,cyrillic'
     rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
+  <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">-->
   <link rel="stylesheet" href="css/jquery.multilevelpushmenu.css">
 
 
@@ -44,6 +44,7 @@
   <link rel="stylesheet" href="css/app.css">
 
   <link rel="stylesheet" href="app/styles/portrait.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
