--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,6 +1,84 @@
 <div class="col-md-5" style="background-image: url('/images/bg1.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
 
+   <div style="position:fixed;top:10px;text-align-last: left;text-align: left;width: inherit;color:white;font-size: 20px;">
+       <table>
 
+           <tr>
+               <td><img src="https://cdn0.iconfinder.com/data/icons/designer-skills/128/node-js-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/>
+               <img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/>
+               <img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/angular-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://media.licdn.com/mpr/mpr/shrink_200_200/AAEAAQAAAAAAAAXrAAAAJGExZTczMmM5LTIwNGQtNGE2OS05MmUxLTFiNDlhZGI5ZWY5ZA.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+           <tr>
+               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
+               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
+               <td>Node JS</td>
+           </tr>
+
+       </table>
+
+       dssdsd
+       </div>
     <div style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
         <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
