--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,84 +1,5 @@
 <div class="col-md-5" style="background-image: url('/images/bg1.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
 
-   <div style="position:fixed;top:10px;text-align-last: left;text-align: left;width: inherit;color:white;font-size: 20px;">
-       <table>
-
-           <tr>
-               <td><img src="https://cdn0.iconfinder.com/data/icons/designer-skills/128/node-js-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/>
-               <img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/>
-               <img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/angular-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://media.licdn.com/mpr/mpr/shrink_200_200/AAEAAQAAAAAAAAXrAAAAJGExZTczMmM5LTIwNGQtNGE2OS05MmUxLTFiNDlhZGI5ZWY5ZA.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="20" height="20"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="20" height="20"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="20" height="20"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-           <tr>
-               <td><img src="https://cdn2.iconfinder.com/data/icons/designer-skills/128/code-programming-java-software-develop-command-language-128.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/256/Star-Half-Full.png" width="40" height="40"/></td>
-               <td><img src="https://cdn4.iconfinder.com/data/icons/pretty_office_3/128/Star-Empty.png" width="40" height="40"/></td>
-               <td>Node JS</td>
-           </tr>
-
-       </table>
-
-       dssdsd
-       </div>
     <div style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
         <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
@@ -88,26 +9,30 @@
 
             <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Developer</em> fluent in <br/><em>MEAN Stack</em>, <em>Hybrid Mobile Apps</em>, beginner in <em> Machine Learning</em> and working in <em>Bengaluru, India</em> </span>
         </h1>
-        <div class="block__cta " style="overflow: visible;">
-            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-shadow: 2px 2px 4px #000000;">
-                                    <span    style=" font-size: small;">Get in touch</span>
-                                </a>
+        <div class="block__cta " style="overflow: visible;margin: -10px;">
+            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-shadow: 2px 2px 4px #000000;font-size: small;">
+            <span style="">Get in touch</span>
+            </a>
         </div>
         <div class="block__social">
-            <a class="block__social__link " target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                    <div class="fa fa-facebook"></div>
+
+            <a class="block__social__link" target="_blank" href="https://in.linkedin.com/in/sivaraj-nagaraj-31743b70" style="visibility: inherit; opacity: 1;">
+                    <img src="/images/linkedin.png" height="30px" width="30px"/>
                     </a>
-            <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                    <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+            <a class="block__social__link" target="_blank" href="https://www.facebook.com/sivarajng" style="visibility: inherit; opacity: 1;">
+                       <img src="/images/facebook.png" height="30px" width="30px"/>
                     </a>
-            <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+            <a class="block__social__link" target="_blank" href="https://github.com/sivarajng/" style="visibility: inherit; opacity: 1;">
+                      <img src="/images/github.png" height="30px" width="30px"/>
                     </a>
-            <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                        <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+            <a class="block__social__link" target="_blank" href="https://plus.google.com/u/0/+SivarajNagaraj" style="visibility: inherit; opacity: 1;">
+                     <img src="/images/google-plus.png" height="30px" width="30px"/>
                     </a>
-            <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+            <a class="block__social__link" target="_blank" href="https://www.hackerrank.com/sivarajng" style="visibility: inherit; opacity: 1;">
+                     <img src="/images/hackerrank.png" height="30px" width="30px"/>
+                    </a>
+            <a class="block__social__link" target="_blank" href="https://www.hackerearth.com/@sivarajng" style="visibility: inherit; opacity: 1;">
+                     <img src="/images/hackerearth.png" height="30px" width="30px"/>
                     </a>
         </div>
     </div>
