--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -1,6 +1,6 @@
-<br/>
+<h3>About me
+</h3>
 
-<br/>
-<br/>
-<br/>
-<h1>HOME</h1>
+Hey what's up? Full name's Rafael but everyone calls me Raf. I'm a front-end developer born & raised in Belgium, but currently working in London at NEVERBLAND.
+
+Fluent in HTML5 CSS3 Sass Less and improving on my JavaScript jQuery every day. I know my way around WordPress and I've recently started experimenting with REST APIs using React.
