--- a/root/app/templates/nav-bar.html
+++ b/root/app/templates/nav-bar.html
@@ -6,16 +6,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="">Sivaraj Nagaraj</a>
+      <a class="navbar-brand" style="color:#1b202e" routerLink="/home">
+           <img class="img-circle img-thumbnail img-responsive pull-left" style="max-width:50px;margin-top: -15px;
+    margin-left: -15px;display: inline-block;" src="/images/logo.jpg">
+      
+        <b>Sivaraj Nagaraj</b></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/home" >Home</a></li>
-        <li routerLinkActive="active"><a routerLink="/skills" >Skills</a></li>
-        <li routerLinkActive="active"><a routerLink="/certifications" >Certifications</a></li>
-        <li routerLinkActive="active"><a routerLink="/experience" >Experience</a></li>
-        <li routerLinkActive="active"><a routerLink="/projects" >Projects</a></li>
-        <li routerLinkActive="active"><a routerLink="/academy" >Academy</a></li>
+        <li routerLinkActive="active"><a routerLink="/home"  style="color:#1b202e" >Home</a></li>
+        <li routerLinkActive="active"><a routerLink="/skills"  style="color:#1b202e" >Skills</a></li>
+        <li routerLinkActive="active"><a routerLink="/certifications"  style="color:#1b202e" >Certifications</a></li>
+        <li routerLinkActive="active"><a routerLink="/experience"  style="color:#1b202e" >Experience</a></li>
+        <li routerLinkActive="active"><a routerLink="/projects"  style="color:#1b202e" >Projects</a></li>
+        <li routerLinkActive="active"><a routerLink="/academy" style="color:#1b202e"  >Academy</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
           <ul class="dropdown-menu">
