--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,4 +1,4 @@
-<div class="col-md-5" style="background-image: url('/images/bg1.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
+<div class="col-md-5" style="background-image: url('/images/bg.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
 
     <div style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
@@ -7,7 +7,7 @@
         </h1>
         <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
 
-            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Developer</em> fluent in <br/><em>MEAN Stack</em>, <em>Hybrid Mobile Apps</em>, beginner in <em> Machine Learning</em> and working in <em>Bengaluru, India</em> </span>
+            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Developer</em> fluent in <br/><em>MEAN Stack</em>, <em>Cloud</em>, <em>DevOps</em>, <em>Hybrid Mobile Apps</em>, also a <em> Machine Learning</em> beginner and working in <em>Bengaluru, India</em> </span>
         </h1>
         <div class="block__cta " style="overflow: visible;margin: -10px;">
             <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-shadow: 2px 2px 4px #000000;font-size: small;">
@@ -16,7 +16,7 @@
         </div>
         <div class="block__social">
 
-            <a class="block__social__link" target="_blank" href="https://in.linkedin.com/in/sivaraj-nagaraj-31743b70" style="visibility: inherit; opacity: 1;">
+            <a class="block__social__link" target="_blank" href="https://www.linkedin.com/in/sivaraj-nagaraj" style="visibility: inherit; opacity: 1;">
                     <img src="/images/linkedin.png" height="30px" width="30px"/>
                     </a>
             <a class="block__social__link" target="_blank" href="https://www.facebook.com/sivarajng" style="visibility: inherit; opacity: 1;">
