--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -1,10 +1,40 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>SKILS</h1>
+<md-tab-group style="height:100vh">
+    <md-tab label="Tab 1" style="height:100vh">All
+
+        <div class="container fluid" style="height:100vh">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="container">
+                        <md-card>Simple card</md-card>
+                        <md-card>Simple card</md-card>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="container" >
+                        <md-card>Simple card</md-card>
+                        <md-card>Simple card</md-card>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="container">
+                        <md-card>Simple card</md-card>
+                        <md-card>Simple card</md-card>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </md-tab>
+    <md-tab label="Tab 2">Languages
+        <md-card>Simple card</md-card>
+        <md-card>Simple card</md-card>
+        <md-card>Simple card</md-card>
+    </md-tab>
+
+</md-tab-group>
