--- a/root/index.ejs
+++ b/root/index.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Test</title>
+  <title>Sivaraj Nagaraj</title>
   <meta charset="UTF-8">
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
